[tool.poetry]
name = "fashion_llm"
version = "0.3.0"
description = ""
authors = ["henrypierce <henrypierce511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
